# ML-in-CPP

Genetics/: CMakeLists.txt  main.cpp
Genetics/include/: genetic.hpp  utils.hpp
Genetics/src/: genetic.cpp  utils.cpp
Genetics/ut/: CMakeLists.txt  main.cpp
Genetics/ut/src/: geneticTest.cpp  utlisTest.cpp
MultiLayerNet/: a.out  main.cpp
PSO/: CMakeLists.txt  main.cpp
PSO/include/: particle.hpp  utils.hpp
PSO/src/: particle.cpp  utils.cpp
Perceptron/: CMakeLists.txt  fuel.txt  main.cpp  perceptron_dataset.txt
Perceptron/include/: perceptron.hpp  perceptron.tpp  utils.hpp  utils.tpp
Perceptron/src/: utils.cpp
